# claude-lint-hook

./: .gitignore  INSTALL.md  README.md  SETUP.md  install.sh  pyproject.toml
scripts/: hook-entry.sh
src/claude_lint_hook/: __init__.py  cli.py  hook.py
src/claude_lint_hook/linters/: __init__.py  base.py  javascript_linter.py  python_linter.py  registry.py
src/claude_lint_hook/utils/: __init__.py  command.py  jsonio.py
tests/fixtures/: sample.py  sample.ts
