[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-lint-hook"
version = "0.1.0"
description = "Globally installable linting hook system for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Keith" }
]
keywords = ["claude", "claude-code", "lint", "hook", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
]

[project.scripts]
claude-lint-hook = "claude_lint_hook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_lint_hook"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel.shared-data]
"scripts" = "share/claude-lint-hook/scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
